--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     --background-color:#222;
     --btn-color:#fff;
     --btn-text-color:#222;
-    --project-card-bg:#222;
+    --project-card-bg:#fff;
     --text-color:#fff;
     --form-text-color:#fff;
     --footer-text-color:#bbb;
@@ -46,7 +46,7 @@ h1,h2{
     text-transform: uppercase;
 }
 h2,h3{
-    font-size: 20px;
+    font-size: 24px;
 }
 h1{
      font-family: 'rubik' sans-serif;
