--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 25px;
+    gap: 20px;
     text-align: center;
-    height: 100dvh;
+    /* height: 100dvh; */
     min-height: 500px;
+    padding-top: 48px;
 
 
     .hero{
@@ -43,18 +44,17 @@
         font-size: 20px;
         font-weight: bold;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-        transition:box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
+        transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
     }
 
     button :hover{
-     transform: scale(1.05);
+        transform: scale(1.05);
     }
 
-    button:active{
-     transform: translateY(2px);
-     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-
-    }
+    button:active {
+        transform: translateY(2px);
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+      }
 
 }
 
